--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,11 +4,13 @@ version = "0.1.0"
 authors = ["ostrosco <ostrosco@fastmail.fm>"]
 build = "build.rs"
 
-[dependencies]
-
 [build-dependencies]
 pkg-config = "*"
 
-[dependencies.x11]
+[target.'cfg(target_os = "linux")'.dependencies.x11]
 version = "2.17.2"
 features = ["xlib"]
+
+[target.'cfg(target_os = "windows")'.dependencies]
+user32-sys = "0.2.0"
+version = "0.2.8"
