--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,4 +13,4 @@ features = ["xlib"]
 
 [target.'cfg(target_os = "windows")'.dependencies]
 user32-sys = "0.2.0"
-version = "0.2.8"
+winapi = "0.2.8"
