--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,9 +3,18 @@ name = "device_query"
 version = "0.1.0"
 authors = ["ostrosco <ostrosco@fastmail.fm>"]
 build = "build.rs"
+description = "A basic library for querying keyboard and mouse state on-demand without a window."
+homepage = "https://github.com/ostrosco/device_query"
+repository = "https://github.com/ostrosco/device_query"
+readme = "README.md"
+keywords = ["input", "mouse", "keyboard"]
+license = "MIT"
+
+[badges]
+travis-ci = { repository = "ostrosco/device_query" }
 
 [build-dependencies]
-pkg-config = "*"
+pkg-config = "0.3.9"
 
 [target.'cfg(target_os = "linux")'.dependencies.x11]
 version = "2.17.2"
