--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,3 +23,7 @@ features = ["xlib"]
 [target.'cfg(target_os = "windows")'.dependencies]
 user32-sys = "0.2.0"
 winapi = "0.2.8"
+
+[target.'cfg(target_os = "macos")'.dependencies]
+readkey = "0.1.7"
+readmouse = "0.2.0"
