--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,9 +16,9 @@ travis-ci = { repository = "ostrosco/device_query" }
 [build-dependencies]
 pkg-config = "0.3.9"
 
-[target.'cfg(target_os = "linux")'.dependencies.x11]
-version = "2.17.2"
-features = ["xlib"]
+[target.'cfg(target_os = "linux")'.dependencies]
+x11 = {version = "2.17.2", features = ["xlib"] }
+input-event-codes = "0.2.0"
 
 [target.'cfg(target_os = "windows")'.dependencies]
 user32-sys = "0.2.0"
