--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,8 +21,7 @@ x11 = {version = "2.17.2", features = ["xlib"] }
 input-event-codes = "0.2.0"
 
 [target.'cfg(target_os = "windows")'.dependencies]
-user32-sys = "0.2.0"
-winapi = "0.2.8"
+winapi = { version = "0.3.9", features = ["winuser"]}
 
 [target.'cfg(target_os = "macos")'.dependencies]
 readkey = "0.1.7"
