--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,17 +1,14 @@
 [package]
-name = "device_query"
+name = "device_query_revamped"
 version = "1.1.3"
-authors = ["ostrosco <ostrosco@fastmail.fm>"]
+authors = ["bloznelis <lukas.bloznelis@gmail.com>"]
 build = "build.rs"
 description = "A basic library for querying keyboard and mouse state on-demand without a window."
-homepage = "https://github.com/ostrosco/device_query"
-repository = "https://github.com/ostrosco/device_query"
+homepage = "https://github.com/bloznelis/device_query"
+repository = "https://github.com/bloznelis/device_query"
 readme = "README.md"
 keywords = ["input", "mouse", "keyboard"]
 license = "MIT"
-
-[badges]
-travis-ci = { repository = "ostrosco/device_query" }
 
 [build-dependencies]
 pkg-config = "0.3.26"
